# EmGL

./: AGL-console.html  CMakeLists.txt  README.md  configure_local.sh  configure_web.sh  index.html
filesystem/: confbase.xml
filesystem/shaders/: fDiffuse.glsl  fInterface.glsl  fPhong.glsl  fPhongFlat.glsl  fTextureOutput.glsl  fWireframe.glsl  vInterface.glsl  vPrimitive.glsl  vTextureOutput.glsl  vVertex.glsl  vVertexFlat.glsl  vWireframe.glsl
src/: Readme-compiler.txt  Readme.txt  main.cpp
src/agl/: CMakeLists.txt  cbase.cpp  cbase.h  cbuffer.hpp  ccamera.cpp  ccamera.h  ccolor.hpp  cglfwwindow.cpp  cglfwwindow.h  cimage.cpp  cimage.h  cimgui.cpp  cimgui.h  cinput.cpp  cinput.h  clogger.cpp  clogger.h  cmaterial.cpp  cmaterial.h  cmesh.cpp  cmesh.h  cnode.cpp  cnode.h  cpassmanager.cpp  cpassmanager.h  crenderable.cpp  crenderable.h  crenderer.cpp  crenderer.h  cshader.cpp  cshader.h  ctransform.cpp  ctransform.h  cwndmanager.cpp  cwndmanager.h  iwindow.h  platform.h
src/agl/primitives/: ccircle.cpp  ccircle.h  ccone.cpp  ccone.h  ccoord.cpp  ccoord.h  ccube.cpp  ccube.h  ccylinder.cpp  ccylinder.h  cdisk.cpp  cdisk.h  cgrid.cpp  cgrid.h  cline.cpp  cline.h  cpoint.cpp  cpoint.h  cquad.cpp  cquad.h  crectangle.cpp  crectangle.h  csphere.cpp  csphere.h  ctriangle.cpp  ctriangle.h  cvisualizer.cpp  cvisualizer.h
src/ext/imgui-master/: imgui_draw.cpp
src/misc/: basemath.h  basicdefs.h  classutils.h  cobserver.hpp  htmlgui.h  jsutils.cpp  jsutils.h
webdata/webext/JQuery/css/: styles.css
webdata/webext/jquery-ui-1.11.4.custom/: jquery-ui.css  jquery-ui.min.css  jquery-ui.theme.min.css
